Issue #1 was fixed (hover effect on mobile that made for a difficult to read background)

--- a/css/4-col-portfolio.css
+++ b/css/4-col-portfolio.css
@@ -8,20 +8,26 @@ body {
   padding-top: 54px;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   body {
     padding-top: 56px;
+  }
+  .portfolio-item {
+    opacity: 0.5;
+  }
+  .portfolio-item:hover {
+    opacity: 1;
   }
 }
 
 .portfolio-item {
   margin-bottom: 30px;
-  opacity: 0.5;
+  /*opacity: 0.5;*/
 }
 
-.portfolio-item:hover {
-  opacity: 1;
-}
+/*.portfolio-item:hover {*/
+  /*opacity: 1;*/
+/*}*/
 
 .pagination {
   margin-bottom: 30px;
